cluster/longhorn-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
  #   nginx.ingress.kubernetes.io/auth-type: basic
  #   nginx.ingress.kubernetes.io/ssl-redirect: 'false'
  #   nginx.ingress.kubernetes.io/auth-secret: basic-auth
  #   nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required '
  #   # custom max body size for file uploading like backing image uploading
  #   nginx.ingress.kubernetes.io/proxy-body-size: 10000m
spec:
  ingressClassName: cilium
  rules:
  - host: "longhorn.k8s.ruttle.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
  tls:
  - hosts:
    - longhorn.k8s.ruttle.net
    secretName: wildcard-staging-certificate
