cluster/ruttle-net-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ruttle-net-ingress
  namespace: default
spec:
  ingressClassName: cilium
  defaultBackend:
    service:
      name: nginx-test
      port:
        number: 80
